# worktimetracker

./: CMakeLists.txt  README.md
include/: worktimetracker.h
src/: main.cpp  worktimetracker.cpp
